# raw-sorter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ghcr.yml
src/raw_sorter/: __init__.py  __main__.py  color.py  config.py  encode.py  fsops.py  heif_pixi.py  log.py  pairs.py  process.py  rawprev.py  settle.py  video.py  watch.py
tests/: test_color.py  test_config.py  test_encode.py  test_fsops.py  test_heif_pixi.py  test_pairs.py  test_process.py  test_video.py
