[project]
name = "raw-sorter"
version = "0.2.0"
description = "Watch a camera RAW+JPG+video folder; emit compact HEIF/MP4 to a photo-album folder and move RAW/video masters to a cold archive."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "t0saki" }]
keywords = ["heif", "raw", "synology", "photos", "nas", "archive", "transcode"]
dependencies = [
    "pillow>=10.0",
    "pillow-heif>=1.0",
    "rawpy>=0.19",
    "numpy>=1.24",
    "watchdog>=3.0",
]

[project.urls]
Homepage = "https://github.com/t0saki/raw-sorter"
Source = "https://github.com/t0saki/raw-sorter"

[project.scripts]
raw-sorter = "raw_sorter.__main__:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raw_sorter"]
